--- a/orb/templates/covid_base.html
+++ b/orb/templates/covid_base.html
@@ -7,71 +7,83 @@
 
 <!DOCTYPE html>
 <html {% block htmlAttrs %}{% endblock %}>
-    <head>
-        {% if page_title %}
-            <title>{% trans 'COVID resources' %}</title>
-        {% else %}
-            <title>{% block extra_head_title %}{% endblock extra_head_title %}
-                - {% trans 'COVID' %}</title>
-        {% endif %}
-        {% block head %}{% endblock %}
 
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-        <meta name="description"
-            content="Frontline health workers provide critical care to
+<head>
+    {% if page_title %}
+    <title>{% trans 'COVID resources' %}</title>
+    {% else %}
+    <title>{% block extra_head_title %}{% endblock extra_head_title %}
+        - {% trans 'COVID' %}</title>
+    {% endif %}
+    {% block head %}{% endblock %}
+
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta name="description" content="Frontline health workers provide critical care to
             millions of people around the world. COVID-19 Library is a global online library helping
-            them access the information, training and support they need."/>
-        <meta name="keywords"
-            content="COVID-19 Digital Classroom, COVID-19, coronavirus, corona, virus, frontline health workers, orb, open resource bank,
+            them access the information, training and support they need." />
+    <meta name="keywords" content="COVID-19 Digital Classroom, COVID-19, coronavirus, corona, virus, frontline health workers, orb, open resource bank,
             online resource bank, platform, health,
             quiz, assessment, mobile, android, learning, video, media,
-            {% block extra_head_keywords %}{% endblock extra_head_keywords %}"/>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:image"
-          content="{{ BASE_URL }}{% static 'orb/images/covid-logo.png' %}">
-        <link rel="search" type="application/opensearchdescription+xml"
-            href="{% url 'orb_opensearch' %}" title="Add COVID-19 Library search">
-        <link rel="shortcut icon" type="image/png"
-            href="{% static 'orb/images/covid-logo.png' %}"/>
-        {% block extra_head_feed %}{% endblock extra_head_feed %}
+            {% block extra_head_keywords %}{% endblock extra_head_keywords %}" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="{{ BASE_URL }}{% static 'orb/images/covid-logo.png' %}">
 
-        {% render_bundle "styles" "css" "COVID_LIBRARY" %}
-        {% block extra_styles %}{% endblock extra_styles %}
 
-        {% block content_scripts %}
-        {% include "covid_data/routes.html" %}
-        {% include "covid_data/category_matrix.html" %}
-        {% endblock %}
-        {% block extra_scripts %}{% endblock extra_scripts %}
-    </head>
-    <body {% block bodyAttrs %}{% endblock %}>
-        {% block app %}{% endblock %}
+    <!-- Bootstrap CDNs Added by Juan.  Only works if stacked immediately below the last meta tag
+    jQuery CDN must be stacked before bootstrap CDN -->
 
-        {% comment %} overloads a hidden div to load in content when front-end mounts{% endcomment %}
-        {% comment %} <div id="contentBlock" hidden>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <link rel="search" type="application/opensearchdescription+xml" href="{% url 'orb_opensearch' %}"
+        title="Add COVID-19 Library search">
+    <link rel="shortcut icon" type="image/png" href="{% static 'orb/images/covid-logo.png' %}" />
+    {% block extra_head_feed %}{% endblock extra_head_feed %}
+
+    {% render_bundle "styles" "css" "COVID_LIBRARY" %}
+    {% block extra_styles %}{% endblock extra_styles %}
+
+    {% block content_scripts %}
+    {% include "covid_data/routes.html" %}
+    {% include "covid_data/category_matrix.html" %}
+    {% endblock %}
+    {% block extra_scripts %}{% endblock extra_scripts %}
+</head>
+
+<body {% block bodyAttrs %}{% endblock %}>
+    {% block app %}{% endblock %}
+
+    {% comment %} overloads a hidden div to load in content when front-end mounts{% endcomment %}
+    {% comment %} <div id="contentBlock" hidden>
         {% block staticContext %}{% block content %}{% endblock %}{% endblock %}
-	    </div> {% endcomment %}
+    </div> {% endcomment %}
 
-        {% render_bundle "app" "js" "COVID_LIBRARY" %}
+    {% render_bundle "app" "js" "COVID_LIBRARY" %}
 
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                            (i[r].q = i[r].q || []).push(arguments)
-                        }, i[r].l = 1 * new Date();
-                a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script',
-                    '//www.google-analytics.com/analytics.js', 'ga');
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script',
+            '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', '{{ ORB_GOOGLE_ANALYTICS_CODE }}', 'auto');
-            ga('send', 'pageview');
-        </script>
-        {% block scripts %}{% endblock %}
-    </body>
+        ga('create', '{{ ORB_GOOGLE_ANALYTICS_CODE }}', 'auto');
+        ga('send', 'pageview');
+    </script>
+    {% block scripts %}{% endblock %}
+</body>
+
 </html>
